fixed non modifiable exception issue at getAllMethod and fields